fix: text-overflow

--- a/resources/style.css
+++ b/resources/style.css
@@ -1160,7 +1160,7 @@ ol li:last-child {padding-bottom: 0px}
 .height-100 {height: 100%}
 .width-100 {width: 100%}
 .nowrap {white-space: nowrap}
-.text-overflow {overflow: hidden; text-overflow: ellipsis;}
+.text-overflow {overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 .fit-content {width: fit-content}
 .show {display: block !important}
 .hide {display: none !important}
